syntax = "proto3";
package IronPdfEngine.Proto;
import "PdfDocument.proto";
import "Basic.proto";

option java_package = "com.ironsoftware.ironpdf.internal.proto";
option java_multiple_files = true;

message MetadataField{
	string key =1;
	optional string value =2;
}

message MetadataFieldResult{
	oneof result_or_exception {
		MetadataField result = 1;
		RemoteException exception =2;
	}
}

message SetMetadataRequest{
	PdfDocument document = 1;
	string key =2;
	string value =3;
}

message GetMetadataRequest{
	PdfDocument document = 1;
	string key =2;
}

message RemoveMetadataRequest{
	PdfDocument document = 1;
	string key =2;
}

